Westlake: comprehensive README with architecture, test results, roadmap